Future Build 1.0.0.1

WebService Changes:

- patched a Bug in handling different SINners with the same Id. That should not happen, unless people are editing the Guids directly - but nethertheless, they can be deleted now withouth Primary Key constraints.
- implemented AdminGetSinners to create a backup of the whole Database. Plz note, that the Chummerfiles themself are NOT affected because they are on GDrive
- changed the initial search for the SINners by Authorization: SINners are grouped now: edit, group, view
- fixed a bug were the check if a Chummer is already on GDrive used the new uploaded (and always empty) GDriveID from the Client - now this ID is kept from the database if it's empty on upload (which it SHOULD be)
- added a DeploymentSlot "Beta" for Azure reachable under https://sinners-beta.azurewebsites.net/ - doubles the cost, halves the chance of me messing things up in production later
- fixed a Bug where Properties were not updated in the Database on POST
- Files at GDrive are checked for existance before uploading and are only updated, if they exist
- added ApplicationInsights Livetracking to see what's going on in the Azure Portal
- added a Role "ConfirmedUser" (Email Address confirmed) for future use (maybe allow versioning only for these users?)
- set the daily Data-Volume Cap to 1GB (for now, can be raised - just to avoid unpleasant surprises)
- DELETE now actually deletes all database-entries in every table, not only the head.
- fixed a bug, where Tags where only added but not removed if not present anymore on a sinner
- added Flat Tags for better searchability (only on the server and hidden)
- Tags now have a Property "TagComment", which should help to find errors (Debugging)
- SinnerID is set in every tag now
- wiped the Database clean (because it WAS really messed up)
- added function GetDeleteAndRecreateDb() for cases where it's really messed up
- added basic validation in the Post WebService function in SinnersController